fixes #1233 better skeleton template better skeleton template which starting at 2 divs adds more until there is a scrollbar then removes one to have as much <div> as possible in the skeleton template

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -4751,7 +4751,7 @@ li.plupload_delete a:hover {background: url("images/cancelhover.svg")!important;
 
 .search-album-ghost div {
   background: #f3f3f3;
-  background-image: linear-gradient(#eee, #fff);
+  background-image: linear-gradient(0.25turn, #eee, rgb(250, 250, 250));
   background-attachment: fixed;
 }
 
